<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#343434"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/expression_text"
        android:layout_weight="1"
        android:text=""
        android:padding="1dp"
        android:gravity="left"
        android:scrollHorizontally="true"
        android:background="#ffffff"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="0dp"
        android:textDirection="ltr"
        android:editable="false"/>
    <EditText
        android:padding="1dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/answer_text"
        android:text="0"
        android:gravity="right"
        android:layout_weight="0.5"
        android:scrollHorizontally="true"
        android:background="#ffffff"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="0dp"
        android:inputType="text"
        android:editable="false"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical"
        android:layout_margin="0.5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_margin="1dp">

            <Button
                android:id="@+id/mode_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="DEG" />

            <Button
                android:id="@+id/shift_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:text="shift" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="back"
                android:id="@+id/back_button"
                android:textStyle="normal"
                android:layout_marginLeft="50dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="clc"
                android:id="@+id/clear_button"
                android:textStyle="normal"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Pi"
                android:id="@+id/pi_button"/>

            <Button
                android:id="@+id/hyp_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="hyp"/>

         <!--   <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="i"
                android:id="@+id/iota_button"
                android:textAllCaps="false"/>-->

            <Button
                android:id="@+id/exp_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="e"
                android:textAllCaps="false" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/logab_text"
                android:textAllCaps="false"
                android:id="@+id/logab_button"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="sin"
                android:id="@+id/sin_button"
                android:textAllCaps="false"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="cos"
                android:id="@+id/cos_button"
                android:textAllCaps="false"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="tan"
                android:id="@+id/tan_button"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/log_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="log"
                android:textAllCaps="false" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="ln"
                android:id="@+id/ln_button"
                android:textAllCaps="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/inverse_text"
                android:id="@+id/inverse_button"
                android:textAllCaps="false"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/square_text"
                android:id="@+id/square_button"
                android:textAllCaps="false"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cube_text"
                android:id="@+id/cube_button"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/power_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/power_text"
                android:textAllCaps="false" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sqrt_text"
                android:id="@+id/sqrt_button"
                android:textAllCaps="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="7"
                android:id="@+id/seven_button"
                android:textAllCaps="false"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="8"
                android:id="@+id/eight_button"
                android:textAllCaps="false"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="9"
                android:id="@+id/nine_button"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/open_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="("
                android:textAllCaps="false" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text=")"
                android:id="@+id/close_button"
                android:textAllCaps="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="4"
                android:id="@+id/four_button"
                android:textAllCaps="false"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="5"
                android:id="@+id/five_button"
                android:textAllCaps="false"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="6"
                android:id="@+id/six_button"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/plus_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="+"
                android:textAllCaps="false" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="-"
                android:id="@+id/minus_button"
                android:textAllCaps="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="1"
                android:id="@+id/one_button"
                android:textAllCaps="false"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="2"
                android:id="@+id/two_button"
                android:textAllCaps="false"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="3"
                android:id="@+id/three_button"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/mul_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="X"
                android:textAllCaps="false" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="/"
                android:id="@+id/div_button"
                android:textAllCaps="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="0"
                android:id="@+id/zero_button"
                android:textAllCaps="false"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="."
                android:id="@+id/dot_button"
                android:textAllCaps="false"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text=","
                android:id="@+id/comma_button"
                android:textAllCaps="false"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="ANS"
                android:id="@+id/answer_button"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/equal_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="="
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>